--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,12 @@
-<div>
 
-    <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm()">
+    <form nz-form [formGroup]="validateForm" class="login-form " (ngSubmit)="submitForm()">
         <img
         nz-image
-        width="250px"
+        width="300px"
         height="200px"
         nzSrc="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
         alt=""
+        style="padding-bottom: 15px;"
       />
         <nz-form-item>
           <nz-form-control nzErrorTip="Please input your username!">
@@ -37,4 +37,3 @@
         <a>register now!</a>
       </form>
     
-</div>
